--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.x"
+  },
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
