--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "prisma": "^5.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "prisma": "^5.2.0"
+    "nodemon": "^3.0.1"
   }
 }
