--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "migrate": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "prisma": "^5.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.6.2",
     "nodemon": "^3.0.1"
   }
 }
